# Aria-virual-industrial

./: .gitignore  AGENTS.md  ARIA_2D3D_Visualization_Spec.md  ARIA_Agentic_Maintenance_Twin_Spec.md  ARIA_HMI_Refactor_Spec.md  ARIA_T1B_Predictive_Maintenance_BuildSpec.md  ARIA_T2A_PlaneSeparation_BuildSpec.md  ARIA_Upgrade_Roadmap_EForest.md  ARIA_Viewport_Process_Upgrade_Spec.md  ARIA_Vision_Inspection_Node_Spec.md  ARIA_store_merge_MIGRATION.md  Dockerfile  README.md  app.py  docker-compose.yml  mcp_config.json  pyproject.toml  requirements.txt  start_aria.sh  start_aria_v2.sh  stop_aria.sh
aria-store-merge/: signalFanout.js  signalStore.js  test_store_merge.mjs  twinStore.js
aria/agents/: __init__.py  analyst_agent.py  autonomous_agent.py  base_agent.py  code_agent.py  data_agent.py  executor_agent.py  industry_agent.py  local_agent.py  research_agent.py  scout_agent.py  verifier_agent.py  vision_agent.py
aria/core/: context.py  database.py  metrics_ts.db-journal  product_registry.py
aria/inspection/: __init__.py  asset_proxy.py  async_pipeline.py  detectors.py  health_features.py  pdm_fusion.py  result_encode.py  (+4 more)
backend/: main.py
docs/: FILE_GUIDE.md  STRUCTURE.md  s3b_audit.md  seam_audit.md  t3a_lifecycle_audit.md
frontend/: .gitignore  PARKED.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
hardware/: monitor.py  telemetry.py
mockups/: 2d3d_flow_mockup.html
server/: __init__.py  app.py  config.py  ws.py
tests/: golden.json  golden_trace.py  s3b4_scenario.py  stale_scenario.py  test_factory_line.py
(+228 files in other folders)
